# crawler

./: .env.sample  .gitignore  README.en.md  README.md  pyproject.toml
.github/workflows/: crawl-jobs.yml
crawler/: cli.py  emailer.py  env.py  fetcher.py  google_sheets.py  parser.py  records.py  settings.py  spider.py  url_utils.py
crawler/core/: __init__.py  fetcher.py  models.py  output.py  spider.py
crawler/sites/: base.py  cake.py  generic.py  registry.py  site104.py  template.py  wwr.py  yourator.py
docs/: yourator-feasibility.md
tests/: test_104_site.py  test_cake_site.py  test_cli.py  test_emailer.py  test_generic_site.py  test_records.py  test_registry.py  test_url_utils.py  test_wwr_site.py  test_yourator_site.py
tests/fixtures/wwr/: ai_duplicate_fullstack.rss  ai_filter_sample.rss  backend_sample.rss
