[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "search-crawler"
version = "0.1.0"
description = "Starter project for a simple website crawler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-api-python-client>=2.169,<3",
  "google-auth>=2.40,<3",
]

[project.scripts]
crawl-site = "crawler.cli:main"

[tool.setuptools.packages.find]
include = ["crawler*"]
